fdo#69289 RTF import: handle cells with zero width

Change-Id: I31b12a5afa5d501d57b56f515ee1d2fd46a09b32