writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -3510,6 +3510,9 @@ int RTFDocumentImpl::dispatchValue(RTFKeyword nKeyword, int nParam)
                                     ? m_nNestedCurrentCellX
                                     : m_nTopLevelCurrentCellX);
                 int nCellX = nParam - rCurrentCellX;
+                const int COL_DFLT_WIDTH = 41; // sw/source/filter/inc/wrtswtbl.hxx, minimal possible width of cells.
+                if (!nCellX)
+                    nCellX = COL_DFLT_WIDTH;
 
                 // If there is a negative left margin, then the first cellx is relative to that.
                 RTFValue::Pointer_t pTblInd = m_aStates.top().aTableRowSprms.find(NS_ooxml::LN_CT_TblPrBase_tblInd);
